Start change Design add bg SVG

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,3 +19,10 @@ a {
 .balloon_button {
 	background: red;
 }
+
+.cls-1 {
+	fill: none;
+	stroke: #009;
+	stroke-linecap: round;
+	stroke-linejoin: round;
+}
